[package]
name = "factorio-up"
version = "0.1.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "A tool to automatically update and run a Factorio server"
keywords = [ "factorio", "gaming", "auto-update" ]
readme = "README.md"

[dependencies]
clap = "4"
ring = "0.17"
tar = "0.4"
ureq = { version = "3", default-features = false, features = ["rustls"] }
xz2 = { version = "0.1", features = ["static"] }
