[package]
name = "factorio-up"
version = "1.0.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "A tool to automatically update and run a Factorio server"
keywords = [ "factorio", "gaming", "auto-update", "server", "headless" ]
categories = [ "command-line-utilities", "games" ]
readme = "README.md"
repository = "https://github.com/fboulnois/factorio-up"
license = "MPL-2.0"

[dependencies]
clap = "4.5"
ring = "0.17"
tar = "0.4"
ureq = { version = "3.1", default-features = false, features = ["rustls"] }
xz2 = { version = "0.1", features = ["static"] }
